# RemoteGPIOPi

./: .gitignore
UNP/: CMakeLists.txt  echo_client.py  main.c
UNP/include/: error.h  io.h  server_logic.h  server_util.h  unp.h
UNP/src/: error.c  io.c  server_logic.c  server_util.c
mk/: config.mak  install.mak  makefile
mk/sub/: makefile
server/: CMakeLists.txt  main.cpp
server/gpio/include/: gpio_native.h
server/gpio/source/: gpio_native.cpp
